# Fastaq

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.py  usage_to_man.sh
fastaq/: __init__.py  caf.py  sequences.py  tasks.py  utils.py
man/: fastaq_capillary_to_pairs.1  fastaq_chunker.1  fastaq_count_sequences.1  fastaq_deinterleave.1  fastaq_enumerate_names.1  fastaq_expand_nucleotides.1  fastaq_extend_gaps.1  fastaq_fasta_to_fastq.1  fastaq_filter.1  fastaq_get_ids.1  fastaq_get_seq_flanking_gaps.1  fastaq_insert_or_delete_bases.1  fastaq_interleave.1  fastaq_long_read_simulate.1  fastaq_make_random_contigs.1  fastaq_merge.1  fastaq_replace_bases.1  fastaq_reverse_complement.1  fastaq_scaffolds_to_contigs.1  fastaq_search_for_seq.1  fastaq_sequence_trim.1  fastaq_split_by_base_count.1  fastaq_strip_illumina_suffix.1  fastaq_to_fake_qual.1  fastaq_to_fasta.1  fastaq_to_mira_xml.1  fastaq_to_orfs_gff.1  fastaq_to_perfect_reads.1  fastaq_to_quasr_primers_file.1  fastaq_to_random_subset.1  fastaq_to_tiling_bam.1  fastaq_to_unique_by_id.1  fastaq_translate.1  fastaq_trim_Ns_at_end.1  fastaq_trim_Ns_at_end.txt  fastaq_trim_Ns_at_end.txt~  fastaq_trim_ends.1
pyfastaq/: .travis.yml  __init__.py  caf.py  common.py  genetic_codes.py  intervals.py  sequences.py  tasks.py
scripts/: fastaq  fastaq_caf_to_fastq  fastaq_capillary_to_pairs  fastaq_chunker  fastaq_count_sequences  fastaq_deinterleave  fastaq_enumerate_names  fastaq_expand_nucleotides  fastaq_extend_gaps  fastaq_fasta_to_fastq  fastaq_filter  fastaq_get_ids  fastaq_get_seq_flanking_gaps  fastaq_insert_or_delete_bases  fastaq_interleave  fastaq_long_read_simulate  fastaq_make_random_contigs  fastaq_merge  fastaq_to_fasta  (+19 more)
(+279 files in other folders)
